--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "mock": "json-server db.json -p 3001"
   },
   "dependencies": {
+    "antd": "5.19.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zustand": "4.5.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.4.5",
